testsuite/tests/rename/should_compile/T22513c.hs
module T22513c where

f :: Int -> Int 
f a = g a 
  where
    g :: a -> a
    g = id