testsuite/tests/rename/should_fail/rnfail041.hs
f = 3
g = 3

h :: Int
j :: Int


